add: inicio implementacao pagina details

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,6 +14,11 @@ body {
     background-color: #fff;
 }
 
+.content a {
+    text-decoration: none;
+    color: white;
+}
+
 @media screen and (min-width: 992px) {
     .content {
         max-width: 992px;
