--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,10 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+    margin: .25rem;
+}
+
+
 .pokemons {
     display: grid;
     grid-template-columns: 1fr;
