--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,3 +22,62 @@ body {
         border-radius: 1rem;
     }
 }
+
+
+.modal-body .modal-header{
+    padding: 0;
+    border: none;
+}
+
+.modal-content{
+    border-radius: 20px;
+    overflow: hidden;
+}
+.modal-body{
+    background-color: aqua;
+    padding: 0;
+}
+
+.modal-body section{
+    padding: 20px;
+}
+.modal-body .description .name{
+    color: #fff;
+    text-shadow: 2px 1px 1px rgb(0, 0, 0, 0.3)
+}
+
+.modal-detail{
+    background-color: #fff;
+    min-height: 200px;
+    padding-top: 30px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.img-pokemon{
+    text-align: center;
+    margin-bottom: -15px;
+}
+
+.number{
+    margin-top: -20px;
+    display: flex;
+    justify-content: end;
+}
+
+.description .types{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 80%;
+}
+
+.description .types .type{
+    color: #fff;
+    margin: 8px;
+    padding: 5px 15px;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3)
+}
