Imagens no cabeçalho do projeto

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -116,7 +116,7 @@
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 13px;
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
