Ajuste tamanho botão "Load more"

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -137,13 +137,14 @@
 }
 
 .pagination button {
-    padding: .25rem .5rem;
+    padding: 10px 80px;
     margin: .25rem 0;
-    font-size: .625rem;
+    font-size: 15px;
     color: #fff;
     background-color: #6c79db;
     border: none;
     border-radius: 1rem;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 380px) {
