--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,14 +4,18 @@
 }
 
 body {
-    background-color: #f6f8fc;
+    background-color: #A3DBF7;
+}
+
+body.modo-escuro {
+	background-color: #212121;
+	color: #f5f5f5;
 }
 
 .content {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
-    background-color: #fff;
 }
 
 @media screen and (min-width: 992px) {
