--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,53 +1,47 @@
-.pokemons {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+@import url('global.css');
 
 .normal {
-    background-color: #a6a877;
+    background-color: #A6A877;
 }
 
 .grass {
-    background-color: #77c850;
+    background-color: #77C850;
 }
 
 .fire {
-    background-color: #ee7f30;
+    background-color: #EE7F30;
 }
 
 .water {
-    background-color: #678fee;
+    background-color: #678FEE;
 }
 
 .electric {
-    background-color: #f7cf2e;
+    background-color: #F7CF2E;
 }
 
 .ice {
-    background-color: #98d5d7;
+    background-color: #98D5D7;
 }
 
 .ground {
-    background-color: #dfbf69;
+    background-color: #DFBF69;
 }
 
 .flying {
-    background-color: #a98ff0;
+    background-color: #A98FF0;
 }
 
 .poison {
-    background-color: #a040a0;
+    background-color: #A040A0;
 }
 
 .fighting {
-    background-color: #bf3029;
+    background-color: #BF3029;
 }
 
 .psychic {
-    background-color: #f65687;
+    background-color: #F65687;
 }
 
 .dark {
@@ -55,111 +49,114 @@
 }
 
 .rock {
-    background-color: #b8a137;
+    background-color: #B8A137;
 }
 
 .bug {
-    background-color: #a8b720;
+    background-color: #A8B720;
 }
 
 .ghost {
-    background-color: #6e5896;
+    background-color: #6E5896;
 }
 
 .steel {
-    background-color: #b9b7cf;
+    background-color: #B9B7CF;
 }
 
 .dragon {
-    background-color: #6f38f6;
+    background-color: #6F38F6;
 }
 
 .fairy {
-    background-color: #f9aec7;
+    background-color: #F9AEC7;
+}
+
+
+.pokemons {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
 }
 
 .pokemon {
+    padding: 1rem;
+    color: #FFFFFF;
+    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
+}
+
+.pokemon .name {
+    color: #FFFFFF;
+    margin-bottom: .25rem;
+    text-transform: capitalize;
 }
 
 .pokemon .number {
-    color: #000;
+    color: #000000;
     opacity: .3;
     text-align: right;
     font-size: .625rem;
 }
 
-.pokemon .name {
-    text-transform: capitalize;
-    color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
+.pokemon .datail {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+
+.pokemon .datail .types {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
 }
 
-.pokemon .detail .types .type {
-    color: #fff;
+.pokemon .datail .types .type {
+    color: #FFFFFF;
     padding: .25rem .5rem;
-    margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
-    filter: brightness(1.1);
+    filter: brightness(1.2);
     text-align: center;
 }
 
-.pokemon .detail img {
+.pokemon .datail img {
     max-width: 100%;
     height: 70px;
 }
 
 .pagination {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 1rem;
+    padding-top: 1rem;
 }
 
 .pagination button {
     padding: .25rem .5rem;
-    margin: .25rem 0;
+    margin-top: .25rem 0;
     font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
+    background-color: #6C79DB;
     border: none;
     border-radius: 1rem;
+    color: #FFFFFF;
 }
 
-@media screen and (min-width: 380px) {
+@media screen and (min-width: 320px) {
     .pokemons {
         grid-template-columns: 1fr 1fr;
     }
+
 }
 
 @media screen and (min-width: 576px) {
     .pokemons {
         grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
