feat: teste primeiras funcionalidades do modal

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,3 +22,15 @@ body {
         border-radius: 1rem;
     }
 }
+
+#loadMoreButton {
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    transform: scale(1.1);
+}
