--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,68 +1,91 @@
-.modal {
-    position: fixed;
-    z-index: 10;
-    width: 60vw;
-    height: auto;
-    left: 20vw;
-    top: 20vh;
-    background-color: white;
-    transform: translateY(-25%);
-    padding: 1rem;
-    box-shadow: 4px 4px 8px #0002;
-    border-radius: 5px;
-    opacity: 0;
-    transition: all 200ms ease-out;
-    pointer-events: none;
+.modal-body .modal-header{
+    padding: 0;
+    border: none;
 }
-
-.modal.visible {
-    opacity: 1;
-    pointer-events: initial;
-    transform: translateY(-50%);
-}
-
-.modal > header {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #0001;
-}
-
-.modal > .corpo-modal {
-    padding: 1em 0;
-}
-
-.modal>footer{
-    display: flex;
-    justify-content: flex-end;
-    border-top: 1px solid #0001;
-    padding: .75em;
-}
-
-span.fechar-modal {
-    background-color: #0001;
-    color: red;
-    padding: .05em;
-    border-radius: 50%;
-    display: flex;
-    width: 1.25em;
-    height: 1.25em;
-    justify-content: center;
-    align-items: center;
+.modal-header button{
     cursor: pointer;
 }
-
-#mascara {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    opacity: 0;
-    pointer-events: none;
+.modal-content{
+    border-radius: 2.5rem;
+    border: solid 3px #ffffff4e;
+    overflow: hidden;
+}
+.modal-body{
+    padding: 0;
+    background-color: #d2d2d2;
 }
 
-.modal.visible ~ #mascara {
-    opacity: 0.1;
-    pointer-events: initial;
+.modal-body section{
+    padding: 20px;
+}
+.modal-body .description .name{
+    color: #fff;
+    text-shadow: 2px 1px 1px rgb(0, 0, 0, 0.3)
+}
+
+.modal-detail{
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.modal-body .img-pokemon{
+    text-align: center;
+    margin-bottom: -55px;
+    margin-top: -20px;
+}
+.modal-body .img-pokemon img{
+    max-width: 70%;
+    max-height: 70%;
+}
+
+.description .name{
+    text-transform: capitalize;
+}
+
+.description .number{
+    margin-top: -20px;
+    display: flex;
+    justify-content: end;
+}
+.description .number span{
+    padding: 5px 15px;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: rgb(0, 0, 0, 0.3);
+}
+
+.description .types{
+    text-transform: capitalize;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 80%;
+}
+
+.description .types .type{
+    text-transform: capitalize;
+    color: #fff;
+    padding: .5rem .8rem;
+    margin: .25rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+}
+
+.modal-detail-content{
+    padding: 0;
+    width: 90%;
+}
+.textInfo{
+    font-size: .9rem;
+    font-weight: 300;
+    text-transform: capitalize;
+}
+.text{
+    text-align: justify;
+    text-transform: none;
 }
