--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -86,6 +86,10 @@
     border-radius: 1rem;
 }
 
+.pokemon:hover{
+    transform: scale(1.1);
+}
+
 .pokemon .number {
     color: #000;
     opacity: .3;
